--- a/index.html
+++ b/index.html
@@ -4,62 +4,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Acme Consulting — Simple & Professional Business Page</title>
-
-  <!-- Styles -->
+  <title>Your Brand — Simple & Professional Business</title>
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Google tag (gtag.js) — GA4 -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4XLLGXLYBP"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-4XLLGXLYBP', { send_page_view: true });
-  </script>
-
-  <!-- Google Tag Manager -->
-  <script>
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MZ9TM2F5');
-  </script>
-  <!-- End Google Tag Manager -->
+  <link rel="icon" href="favicon.ico" />
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MZ9TM2F5"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-
   <!-- ===== NAVBAR ===== -->
   <header class="site-header" role="banner">
     <div class="container nav">
-      <a href="#home" class="brand">Acme<span>Consulting</span></a>
+      <a href="#home" class="brand" aria-label="Go to home">Your<span>Brand</span></a>
 
       <nav aria-label="Primary" class="nav-links">
-        <a href="#home" class="nav-link">Home</a>
-        <a href="#services" class="nav-link">Services</a>
-        <a href="#pricing" class="nav-link">Pricing</a>
-        <a href="#contact" class="nav-link">Contact</a>
-        <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="nav-link ext">LinkedIn ↗</a>
+        <a class="nav-link" href="#home">Home</a>
+        <a class="nav-link" href="#services">Services</a>
+        <a class="nav-link" href="#features">Features</a>
+        <a class="nav-link" href="#pricing">Pricing</a>
+        <a class="nav-link" href="#testimonials">Testimonials</a>
+        <a class="nav-link" href="#faq">FAQ</a>
+        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link ext" href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn ↗</a>
       </nav>
 
       <button id="ctaBtn" class="btn primary small">Get Started</button>
     </div>
   </header>
 
-  <!-- ===== HERO (no video) ===== -->
+  <!-- ===== HERO ===== -->
   <section id="home" class="hero">
     <div class="container hero-grid">
       <div class="hero-copy">
         <h1>Grow faster with clear strategy & simple execution</h1>
-        <p>We help businesses focus on what matters—reliable delivery, measurable outcomes, and great customer experience.</p>
+        <p>We help teams deliver reliably with measurable outcomes and exceptional customer experience.</p>
         <div class="hero-actions">
-          <a id="heroCta" href="#contact" class="btn accent">Book a Free Call</a>
+          <a href="#contact" class="btn primary" id="heroCta">Book a Free Call</a>
           <a href="#services" class="btn ghost">See Services</a>
         </div>
         <ul class="hero-meta">
@@ -69,7 +47,7 @@
         </ul>
       </div>
 
-      <!-- You can add an illustration or stat block here instead of video -->
+      <!-- Illustration / KPI block -->
       <div class="hero-media alt-block">
         <div class="stat">
           <div class="stat-value">95%</div>
@@ -79,7 +57,7 @@
           <div class="stat-value">+38%</div>
           <div class="stat-label">Conversion uplift</div>
         </div>
-        <p class="hint">Trusted by startup and enterprise teams.</p>
+        <p class="hint">Trusted by startup & enterprise teams.</p>
       </div>
     </div>
   </section>
@@ -110,8 +88,29 @@
     </div>
   </section>
 
+  <!-- ===== FEATURES ===== -->
+  <section id="features" class="section alt">
+    <div class="container">
+      <h2 class="section-title">Why Choose Us</h2>
+      <div class="cards">
+        <article class="card">
+          <h3>Fast Onboarding</h3>
+          <p>Kick off in days, not months—lightweight processes, quick wins.</p>
+        </article>
+        <article class="card">
+          <h3>Quality & Reliability</h3>
+          <p>Battle-tested practices to reduce risk and improve delivery consistency.</p>
+        </article>
+        <article class="card">
+          <h3>Clear Communication</h3>
+          <p>Transparent status updates, reports, and decision-ready insights.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
   <!-- ===== PRICING ===== -->
-  <section id="pricing" class="section alt">
+  <section id="pricing" class="section">
     <div class="container">
       <h2 class="section-title">Simple Pricing</h2>
       <div class="pricing">
@@ -123,7 +122,7 @@
             <li>Basic reporting</li>
             <li>Email support</li>
           </ul>
-          <a href="#contact" class="btn primary">Choose Starter</a>
+          <a href="#contact" class="btn accent wide">Choose Starter</a>
         </div>
 
         <div class="price-card featured">
@@ -135,7 +134,7 @@
             <li>Advanced analytics</li>
             <li>Priority support</li>
           </ul>
-          <a href="#contact" class="btn accent">Choose Growth</a>
+          <a href="#contact" class="btn primary wide">Choose Growth</a>
         </div>
 
         <div class="price-card">
@@ -146,8 +145,50 @@
             <li>Custom SLAs</li>
             <li>Security review</li>
           </ul>
-          <a href="#contact" class="btn ghost">Talk to Sales</a>
+          <a href="#contact" class="btn ghost wide">Talk to Sales</a>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== TESTIMONIALS ===== -->
+  <section id="testimonials" class="section">
+    <div class="container">
+      <h2 class="section-title">What Clients Say</h2>
+      <div class="cards">
+        <article class="card">
+          <p>“They transformed our delivery. Clear metrics, faster releases, happier customers.”</p>
+          <p class="small muted">— Priya S., Product Lead</p>
+        </article>
+        <article class="card">
+          <p>“Professional, predictable, and proactive. Best partner we’ve worked with.”</p>
+          <p class="small muted">— Arjun M., CTO</p>
+        </article>
+        <article class="card">
+          <p>“Our analytics finally drive decisions. Worth every rupee.”</p>
+          <p class="small muted">— Kavya R., Growth Manager</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== FAQ ===== -->
+  <section id="faq" class="section alt">
+    <div class="container">
+      <h2 class="section-title">Frequently Asked Questions</h2>
+      <div class="faq">
+        <details class="faq-item">
+          <summary>How fast can we start?</summary>
+          <p>Typically within 5–7 business days after scope confirmation.</p>
+        </details>
+        <details class="faq-item">
+          <summary>Do you work with startups?</summary>
+          <p>Yes—our process scales from small teams to enterprise squads.</p>
+        </details>
+        <details class="faq-item">
+          <summary>Can we customize the plan?</summary>
+          <p>Absolutely. We tailor deliverables, SLAs, and reporting to your needs.</p>
+        </details>
       </div>
     </div>
   </section>
@@ -186,19 +227,19 @@
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>
-        <a href="#home" class="brand">Acme<span>Consulting</span></a>
-        <p class="small">© 2025 Acme Consulting. All rights reserved.</p>
+        <a href="#home" class="brand">Your<span>Brand</span></a>
+        <p class="small">© 2026 Your Brand. All rights reserved.</p>
       </div>
       <nav aria-label="Footer">
-        <a href="#services" class="footer-link">Services</a>
-        <a href="#pricing" class="footer-link">Pricing</a>
-        <a href="#contact" class="footer-link">Contact</a>
-        <a href="mailto:hello@acme.example" class="footer-link">Email us</a>
+        <a class="footer-link" href="#services">Services</a>
+        <a class="footer-link" href="#pricing">Pricing</a>
+        <a class="footer-link" href="#faq">FAQ</a>
+        <a class="footer-link" href="#contact">Contact</a>
       </nav>
       <div class="socials">
-        <a href="https://twitter.com" target="_blank" rel="noopener" class="social">Twitter ↗</a>
-        <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="social">LinkedIn ↗</a>
-        <a href="https://github.com" target="_blank" rel="noopener" class="social">GitHub ↗</a>
+        <a class="social" href="mailto:hello@yourbrand.example">Email us</a>
+        <a class="social" href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn ↗</a>
+        <a class="social" href="https://github.com/" target="_blank" rel="noopener">GitHub ↗</a>
       </div>
     </div>
   </footer>
