--- a/index.html
+++ b/index.html
@@ -322,6 +322,45 @@
 
           Your browser does not support the video tag.
         </video>
+        
+<!-- ===== FEATURED VIDEO (Professional) ===== -->
+<section id="featured-video" class="section" aria-label="Featured Video">
+  <div class="container">
+    <h2 class="section-title">Inside Our Work</h2>
+
+    <div class="card" style="padding: 0; overflow: hidden;">
+      <figure style="margin: 0;">
+        <video
+          id="sampleVideo"
+          class="pro-video"
+          controls
+          playsinline
+          preload="metadata"
+          poster="https://images.pexels.com/photos/3184454/pexels-photo-3184454.jpeg?auto=compress&cs=tinysrgb&w=1280&h=720"
+          style="width: 100%; display: block; border-radius: 16px;"
+          aria-label="Showreel: professional office and collaboration"
+          controlslist="nodownload noplaybackrate"
+        >
+          <!-- Primary MP4 (broad support) -->
+          <source src="https://videos.pexels.com/video-files/3184454/3184454-uhd_2560_1440_25fps.mp4" type="video/mp4" />
+
+          <!-- Secondary WebM (some browsers prefer this) -->
+          <source src="https://storage.googleapis.com/coverr-public/webm/beautiful-lake-169.webm" type="video/webm" />
+
+          <!-- Optional captions (replace with your own VTT file) -->
+          <!-- <track kind="captions" src="/assets/captions-en.vtt" srclang="en" label="English"> -->
+
+          Your browser does not support the video tag.
+        </video>
+
+        <figcaption class="hint" style="padding: 12px 16px;">
+          A short professional showreel. Replace sources with your brand video when ready for production.
+        </figcaption>
+      </figure>
+    </div>
+  </div>
+</section>
+
 
         <figcaption class="hint" style="padding: 12px 16px;">
           A short professional showreel. Replace sources with your brand video when ready for production.
