--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Your Brand — Simple & Professional Business</title>
+
+  <!-- Styles & Favicon -->
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.ico" />
 
@@ -14,7 +16,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-MXVNL8GMQE');
   </script>
 
@@ -61,7 +62,7 @@
   <section id="home" class="hero">
     <div class="container hero-grid">
       <div class="hero-copy">
-        <h1>Grow faster with clear strategy & simple execution</h1>
+        <h1>Grow faster with clear strategy &amp; simple execution</h1>
         <p>We help teams deliver reliably with measurable outcomes and exceptional customer experience.</p>
         <div class="hero-actions">
           <a href="#contact" class="btn primary" id="heroCta">Book a Free Call</a>
@@ -84,23 +85,42 @@
           <div class="stat-value">+38%</div>
           <div class="stat-label">Conversion uplift</div>
         </div>
-        <p class="hint">Trusted by startup & enterprise teams.</p>
+        <p class="hint">Trusted by startup &amp; enterprise teams.</p>
       </div>
     </div>
   </section>
 
+  <!-- ===== FEATURED VIDEO (Professional) ===== -->
+  <section id="featured-video" class="section" aria-label="Featured Video">
+    <div class="container">
+      <h2 class="section-title">Inside Our Work</h2>
 
+      <div class="card" style="padding: 0; overflow: hidden;">
+        <figure style="margin: 0;">
+          <video
+            id="sampleVideo"
+            class="pro-video"
+            controls
+            playsinline
+            preload="metadata"
+            poster="https://images.pexels.com/photos/3184454/pexels-photo-3184454.jpeg?auto=compress&cs=tinysrgb&w=1280&h=720"
+            style="width: 100%; display: block; border-radius: 16px;"
+            aria-label="Showreel: professional office and collaboration"
+            controlslist="nodownload noplaybackrate"
+          >
+            <!-- Primary MP4 (broadest support) -->
+            <source src="https://videos.pexels.com/video-files/3184454/3184454-uhd_2560_1440_25fps.mp4" type="video/mp4" />
+            <!-- Secondary WebM (some browsers prefer this) -->
+            <source src="https://storage.googleapis.com/coverr-public/webm/beautiful-lake-169.webm" type="video/webm" />
+            <!-- Optional captions (replace with your own VTT if available) -->
+            <!-- <track kind="captions" label="English" srclang="en" src="/assets/captions-en.vtt" default /> -->
+            Your browser does not support the video tag.
+          </video>
 
-      <p class="hint" style="padding: 12px 16px;">
-        Replace the source with your own branded clip when ready.
-      </p>
-    </div>
-  </div>
-</section>
-
-        <p class="hint" style="padding: 12px 16px;">
-          A short, professional video block. Replace the source with your own branded clip when ready.
-        </p>
+          <figcaption class="hint" style="padding: 12px 16px;">
+            A short professional showreel. Replace sources with your brand video when ready for production.
+          </figcaption>
+        </figure>
       </div>
     </div>
   </section>
@@ -111,19 +131,19 @@
       <h2 class="section-title">Services</h2>
       <div class="cards">
         <article class="card">
-          <h3>Strategy & Planning</h3>
+          <h3>Strategy &amp; Planning</h3>
           <p>Set clear goals, define KPIs, and align teams for outcomes that compound.</p>
           <a href="#contact" class="link">Talk to an expert →</a>
         </article>
 
         <article class="card">
-          <h3>Product & Delivery</h3>
+          <h3>Product &amp; Delivery</h3>
           <p>Lean workflows, strong QA, and predictable releases that delight customers.</p>
           <a href="#contact" class="link">Start a pilot →</a>
         </article>
 
         <article class="card">
-          <h3>Data & Analytics</h3>
+          <h3>Data &amp; Analytics</h3>
           <p>From events to dashboards—insights that actually inform decisions.</p>
           <a href="#contact" class="link">Get a demo →</a>
         </article>
@@ -141,7 +161,7 @@
           <p>Kick off in days, not months—lightweight processes, quick wins.</p>
         </article>
         <article class="card">
-          <h3>Quality & Reliability</h3>
+          <h3>Quality &amp; Reliability</h3>
           <p>Battle-tested practices to reduce risk and improve delivery consistency.</p>
         </article>
         <article class="card">
@@ -286,91 +306,8 @@
       </div>
     </div>
   </footer>
-  
-<!-- ===== FEATURED VIDEO (Professional) ===== -->
-<section id="featured-video" class="section" aria-label="Featured Video">
-  <div class="container">
-    <h2 class="section-title">Inside Our Work</h2>
 
-    <div class="card" style="padding: 0; overflow: hidden;">
-      <figure style="margin: 0;">
-        <video
-          id="sampleVideo"
-          class="pro-video"
-          controls
-          playsinline
-          preload="metadata"
-          poster="https://images.pexels.com/photos/3184454/pexels-photo-3184454.jpeg?auto=compress&cs=tinysrgb&w=1280&h=720"
-          style="width: 100%; display: block; border-radius: 16px;"
-          aria-label="Showreel: professional office and collaboration"
-          controlslist="nodownload noplaybackrate"
-        >
-          <!-- Primary MP4 (broadest support) -->
-          <source src="https://videos.pexels.com/video-files/3184454/3184454-uhd_2560_1440_25fps.mp4" type="video/mp4" />
-
-          <!-- Secondary WebM (smaller size in some browsers) -->
-          <source src="https://storage.googleapis.com/coverr-public/webm/beautiful-lake-169.webm" type="video/webm" />
-
-          <!-- Optional captions (replace with your own VTT when available) -->
-          <track
-            kind="captions"
-            label="English"
-            srclang="en"
-            src="/assets/captions-en.vtt"
-            default
-          />
-
-          Your browser does not support the video tag.
-        </video>
-        
-<!-- ===== FEATURED VIDEO (Professional) ===== -->
-<section id="featured-video" class="section" aria-label="Featured Video">
-  <div class="container">
-    <h2 class="section-title">Inside Our Work</h2>
-
-    <div class="card" style="padding: 0; overflow: hidden;">
-      <figure style="margin: 0;">
-        <video
-          id="sampleVideo"
-          class="pro-video"
-          controls
-          playsinline
-          preload="metadata"
-          poster="https://images.pexels.com/photos/3184454/pexels-photo-3184454.jpeg?auto=compress&cs=tinysrgb&w=1280&h=720"
-          style="width: 100%; display: block; border-radius: 16px;"
-          aria-label="Showreel: professional office and collaboration"
-          controlslist="nodownload noplaybackrate"
-        >
-          <!-- Primary MP4 (broad support) -->
-          <source src="https://videos.pexels.com/video-files/3184454/3184454-uhd_2560_1440_25fps.mp4" type="video/mp4" />
-
-          <!-- Secondary WebM (some browsers prefer this) -->
-          <source src="https://storage.googleapis.com/coverr-public/webm/beautiful-lake-169.webm" type="video/webm" />
-
-          <!-- Optional captions (replace with your own VTT file) -->
-          <!-- <track kind="captions" src="/assets/captions-en.vtt" srclang="en" label="English"> -->
-
-          Your browser does not support the video tag.
-        </video>
-
-        <figcaption class="hint" style="padding: 12px 16px;">
-          A short professional showreel. Replace sources with your brand video when ready for production.
-        </figcaption>
-      </figure>
-    </div>
-  </div>
-</section>
-
-
-        <figcaption class="hint" style="padding: 12px 16px;">
-          A short professional showreel. Replace sources with your brand video when ready for production.
-        </figcaption>
-      </figure>
-    </div>
-  </div>
-</section>
-
-
+  <!-- App script with dataLayer events -->
   <script src="script.js"></script>
 </body>
 </html>
